fix cookie banner shift

--- a/css/styles.css
+++ b/css/styles.css
@@ -554,6 +554,9 @@ footer a:hover {
     flex-direction: column; /* Ensures vertical stacking */
     align-items: center;
     box-sizing: border-box;
+    visibility: hidden;
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
 }
 
 #cookie-banner p {
